...
          isDateBackInTimeError.value,
          isTextEvaluationError.value)

  Box(
      modifier =
          Modifier.fillMaxSize()
              .testTag("addEventScreen")
              .padding(paddingValues)
              .background(MaterialTheme.colorScheme.background),
      contentAlignment = Alignment.Center) {
        Column(
            modifier = Modifier.fillMaxWidth().verticalScroll(rememberScrollState()),
            verticalArrangement = Arrangement.spacedBy(18.dp),
...
              ParticipantNumberSelection(event)

              if (errorStates.any { it }) {
                Text(
                    modifier =
                        Modifier.padding(vertical = 0.dp, horizontal = 25.dp)
                            .testTag("errorMessage"),
                    textAlign = TextAlign.Center,
                    color = MaterialTheme.colorScheme.error,
                    text = formErrorMessage.value)
              }
              // for non users-related-input errors, we only show the message for a brief amount of
              // time
...

              Row(
                  modifier = Modifier.fillMaxWidth().padding(top = 10.dp),
                  horizontalArrangement = Arrangement.SpaceEvenly) {
                    Button(
                        colors = ColorPalette.BUTTON_COLOR,
                        modifier = Modifier.testTag("addEventButton"),
                        onClick = {
                          onAddEventClickHandler(
                              event,
                              navigationActions,
                              eventViewModel,
                              userViewModel,
...

                    if (editEvent) {
                      Button(
                          colors =
                              ColorPalette.BUTTON_COLOR.copy(
                                  containerColor = MaterialTheme.colorScheme.error),
                          modifier = Modifier.testTag("deleteEventButton"),
                          onClick = {
                            Toast.makeText(
                                    context,
                                    context.getString(R.string.AddEventToastEventDeleted),
                                    Toast.LENGTH_LONG)
                                .show()
...
        // reset the field errors
        isTitleEmptyError.value = false
        isTextEvaluationError.value = false
      },
      label = { Text(context.getString(R.string.AddEventTextEventTitle)) },
      isError = isTitleEmptyError.value || isTextEvaluationError.value,
      modifier = Modifier.testTag("titleTag").fillMaxWidth(0.9f))
}

/**
 * Used to change the description of the event
 *
 * @param event the event that will be updated
...
        description = it
        event.description = description
        isTextEvaluationError.value = false // reset the field error
      },
      label = { Text(context.getString(R.string.AddEventTextEventDescription)) },
      isError = isTextEvaluationError.value,
      modifier = Modifier.testTag("descriptionTag").fillMaxWidth(0.9f).height(128.dp))
}

/**
 * Used to change the maximum number of participants of the event
 *
 * @param event the event that will be updated
...

  Column(
      verticalArrangement = Arrangement.Center,
      horizontalAlignment = Alignment.CenterHorizontally,
      modifier = Modifier.fillMaxWidth()) {
        Slider(
            modifier = Modifier.fillMaxWidth(0.8f).testTag("sliderMaxParticipants"),
            value = sliderPosition,
            onValueChange = {
              sliderPosition = it
              event.maxParticipants = sliderPosition.toInt()
            },
            colors =
...
        isError = isDateError.value,
        label = { Text(context.getString(R.string.AddEventTextEventDate)) },
        readOnly = true,
        trailingIcon = {
          Row {
            IconButton(
                modifier = Modifier.testTag("dateIcon"),
                onClick = { showDatePicker = !showDatePicker }) {
                  Icon(imageVector = Icons.Default.DateRange, contentDescription = "Select date")
                }
            IconButton(
                modifier = Modifier.testTag("timeIcon"),
                onClick = { showTimePicker = !showTimePicker }) {
                  Icon(imageVector = Icons.Outlined.AccessTime, contentDescription = "Select time")
                }
          }
        },
        modifier = Modifier.fillMaxWidth())
...
                  horizontalAlignment = Alignment.CenterHorizontally,
                  verticalArrangement =
                      Arrangement.spacedBy(0.dp) // Adds space between the DatePicker and the button
                  ) {
                    DatePicker(state = datePickerState, showModeToggle = false)
                    Button(
                        modifier = Modifier.testTag("validateDate"),
                        colors = ColorPalette.BUTTON_COLOR,
                        onClick = {
                          showDatePicker = false

                          event.date =
                              datePickerState.selectedDateMillis
...
                    .offset(y = 10.dp)
                    .background(MaterialTheme.colorScheme.surface)
                    .align(Alignment.Center)) {
              TimePicker(state = timePickerState, modifier = Modifier.fillMaxWidth())

              Button(
                  modifier = Modifier.testTag("validateTime"),
                  colors = ColorPalette.BUTTON_COLOR,
                  onClick = {
                    showTimePicker = false
                    isDateError.value = false // reset the field error

                    event.date =
...
