...
    navigationActions: NavigationActions,
    paddingValues: PaddingValues = PaddingValues(0.dp)
) {

  val event = eventViewModel.currentEvent.collectAsState()

  Box(modifier = Modifier.fillMaxSize().padding(paddingValues).testTag("eventOverviewScreen")) {
    Column(modifier = Modifier.fillMaxHeight().testTag("eventContent")) {
      event.value?.let { EventDetails(it, userViewModel) }

      HorizontalDivider(modifier = Modifier.fillMaxWidth().padding(vertical = 8.dp))

      event.value?.let { EventDashboard(it, userViewModel) }

...
  val user = userViewModel.user.collectAsState().value

  Column {
    Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.Center) {
      Text(
          event.title,
          modifier = Modifier.testTag("eventTitle"),
          fontSize = 24.sp,
          style = TextStyle(textDecoration = TextDecoration.Underline),
          textAlign = TextAlign.Center)
    }

    Row(
        modifier = Modifier.padding(top = 16.dp).fillMaxWidth(),
        horizontalArrangement = Arrangement.Center,
        verticalAlignment = Alignment.CenterVertically) {
          DisplayUserPicture(user, 48.dp, "eventOwnerPicture")
          Text(
              context.getString(R.string.EventOverviewOrganizer, user?.username),
              modifier = Modifier.testTag("eventOwner"))
        }

    Row(
        modifier = Modifier.padding(top = 16.dp).fillMaxWidth(),
        horizontalArrangement = Arrangement.Center,
        verticalAlignment = Alignment.CenterVertically) {
          Icon(
              Icons.Filled.DateRange,
              contentDescription = "Date",
              modifier = Modifier.testTag("dateIcon"))
          Text(event.date.toFormattedString(), modifier = Modifier.padding(8.dp).testTag("date"))
          Icon(
              Icons.TwoTone.Face,
              contentDescription = "participants",
              modifier = Modifier.padding(start = 64.dp).testTag("participantsIcon"))
          Text(
              context.getString(
                  R.string.EventOverviewNbrParticipant,
                  event.listParticipants.size,
                  event.maxParticipants),
              modifier = Modifier.padding(8.dp).testTag("participants"))
...

  Row(
      modifier = Modifier.padding(top = 16.dp, bottom = 16.dp),
      verticalAlignment = Alignment.CenterVertically) {
        Icon(
            Icons.Outlined.LocationOn,
            contentDescription = "location",
            modifier = Modifier.padding(horizontal = 8.dp).testTag("locationIcon"))
        Text(
            context.getString(R.string.EventOverviewLocation, park?.name),
            modifier = Modifier.testTag("location"))
      }

  GoogleMap(
      modifier = Modifier.testTag("googleMap").fillMaxSize(),
      cameraPositionState = cameraPositionState) {
        Marker(
            contentDescription = "Event location",
            state = MarkerState(position = parkLatLng ?: LatLng(0.0, 0.0)),
            icon = BitmapDescriptorFactory.defaultMarker(BitmapDescriptorFactory.HUE_AZURE),
            onClick = {
...
  // Main container column with a fixed height and scrollable inner content
  Column(
      modifier =
          Modifier.fillMaxWidth()
              .height(220.dp) // Restrict the total height of the dashboard
              .background(ColorPalette.INTERACTION_COLOR_LIGHT) // Example background color
              .testTag("eventDashboard")) {

        // Top bar
        DashBoardBar()
        when (uiState.collectAsState().value) {
          DashboardState.Details -> {
            // Scrollable content area
            Column(
                modifier =
                    Modifier.fillMaxWidth()
                        .padding(10.dp)
                        .testTag("dashboardContent")
                        .verticalScroll(rememberScrollState()) // Make the content scrollable
                ) {
                  Text(
                      text = event.description,
                      modifier = Modifier.padding(10.dp).testTag("eventDescription"))
                }
          }
          DashboardState.Participants -> {
            userViewModel.getUsersByUids(event.listParticipants)
            ParticipantsList(userViewModel.userList.collectAsState().value)
          }
...
 * participants of the event
 */
@Composable
fun DashBoardBar() {
  val context = LocalContext.current
  NavigationBar(
      modifier = Modifier.testTag("dashboard").fillMaxWidth().height(56.dp),
      containerColor = ColorPalette.PRINCIPLE_BACKGROUND_COLOR) {
        val state = uiState.collectAsState().value

        NavigationBarItem(
            modifier = Modifier.testTag("detailsTab"),
            icon = { Text(context.getString(R.string.EventOverviewNavigationBarDetails)) },
            selected = state == DashboardState.Details,
            onClick = { uiState.value = DashboardState.Details },
            colors = ColorPalette.NAVIGATION_BAR_ITEM_COLORS)

        NavigationBarItem(
            modifier = Modifier.testTag("participantsTab"),
            icon = { Text(context.getString(R.string.EventOverviewNavigationBarParticipants)) },
            selected = state == DashboardState.Participants,
            onClick = { uiState.value = DashboardState.Participants },
            colors = ColorPalette.NAVIGATION_BAR_ITEM_COLORS)
      }
}
...
 * This function displays the friends list.
 *
 * @param participants - The list of friends to display.
 */
@Composable
fun ParticipantsList(participants: List<User?>) {
  LazyColumn(modifier = Modifier.fillMaxSize().testTag("participantsList")) {
    items(participants) { friend ->
      if (friend != null) {
        Row(
            modifier =
                Modifier.fillMaxWidth().padding(horizontal = 16.dp).testTag("participantItem"),
            verticalAlignment = Alignment.CenterVertically) {
...
