...
fun EventDetails(event: Event) {
  Column {
    Row(modifier = Modifier.padding(16.dp), verticalAlignment = Alignment.CenterVertically) {
      Icon(
          Icons.Outlined.AccountCircle,
          contentDescription = "User",
          modifier = Modifier.padding(horizontal = 8.dp).testTag("ownerIcon"))
      Text("Organized by: ${event.owner}", modifier = Modifier.testTag("eventOwner"))
    }

    Row(modifier = Modifier.padding(16.dp), verticalAlignment = Alignment.CenterVertically) {
      Icon(
          Icons.Filled.DateRange,
...
